Fix some colour and text alignment problems on the index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,7 @@ body {
 /*Header Section */
 
 header {
-    /*background-color: #927397;*/
-    background-color: #cb01d6;
+    background-color: rgba(135, 18, 212, 0.6);
     height: 100px;
     width: 100%;    
 }
@@ -42,8 +41,8 @@ header {
     margin-top: 10px;
     text-decoration: none;
     text-transform: uppercase;
-    letter-spacing: 3px;
-    font-size: 220%;
+    letter-spacing: 1px;
+    font-size: 1.25rem;
     font-family: 'Roboto', 'sans-serif';
     font-weight: 500;
     color: white;
@@ -64,12 +63,11 @@ header {
 
 #menu li {
     display: inline;
-    margin-right: 50px;
+    margin-right: 30px;
     list-style-type: none;
     font-family: 'Roboto', 'sans-serif';
-    font-size: 130%;
-    letter-spacing: 4px;
-    align-self: center;
+    font-size: 1.25rem;
+    /*align-self: center;*/
     color: white;
     font-weight: 500;
     text-transform: uppercase;
@@ -94,7 +92,7 @@ header {
 #menu .active {
     border: 3px solid white;
     color: #fff;
-    padding: 3px;	
+    padding: 2px;	
 }
 
 
@@ -111,10 +109,10 @@ header {
 
 #cover-text {
     color: white;
-    font-size: 120%;
+    font-size: 1.25rem;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     width: 40%;
     height: 200px;
     margin-left: 30px;
@@ -128,7 +126,7 @@ header {
 
 /*Sign Up for Newsletter */
 
-#sign-up {
+/*#sign-up {
     margin-top: 15px;
     background-color: rgb(134, 76, 134);
     height: 90px;      
@@ -151,12 +149,12 @@ button {
     border: 2px solid white;
     font-weight: bold;
 }
-
+*/
 
 /*Welcome Section */
 
 .welcome {
-    background-color: #9fa4c4;
+    /*background-color: #9fa4c4;*/
     background-image: linear-gradient(315deg, #9fa4c4 0%, #9e768f 74%);
     margin: 7px 2px 7px 2px;
     display: flex;
@@ -209,9 +207,10 @@ button {
 }
 
 #boxes .box img{
-  padding: 10px;
+ 
   display: block;
   margin: auto;
+  object-fit: cover;
 }
 
 #boxes .box p {
@@ -221,7 +220,8 @@ button {
     padding: 5px;
     font-family: 'Roboto', 'sans-serif';
     font-weight: 300;
-    padding: 6px;    
+    padding: 6px; 
+    line-height: 1.6;   
 }
 
 #boxes .box h2 {
@@ -252,7 +252,6 @@ button {
 footer {
     height: 160px;
     background-color: #927397;
-    background-color: rgb(95, 11, 145);;
     width: 100%;
     padding: 15px;   
 }
@@ -273,7 +272,7 @@ footer p {
 }
 
 .social-networks i {
-    font-size: 140%;
+    font-size: 1.25rem;
     margin: 1%;
     color: white;
 }
@@ -450,10 +449,10 @@ footer p {
     clear: both;
     text-align: Center;
     word-spacing: 4px;
-    font-size: 240%;
+    font-size: 2rem;
     /*background-color:  #927397;*/
-    background-color: #9601d6;
-    color: white;
+    background-color: white;
+    color: #927397;
     padding: 12px;
     margin-top: 20px;
     font-family: 'Roboto', 'sans-serif';
@@ -731,7 +730,7 @@ input[type=text]:focus, input[type=password]:focus {
         width: 150px;
         height: 150px;
         display: inline-block;
-        padding: 10px;        
+        object-fit: cover;       
       }
 
     #boxes .box p {
@@ -905,6 +904,7 @@ input[type=text]:focus, input[type=password]:focus {
     width: 210px;
     height: 210px;
     display: inline-block;
+    object-fit: cover;
   }
   
   #boxes .box  p {      
@@ -939,7 +939,7 @@ input[type=text]:focus, input[type=password]:focus {
   
   footer {
       height: 140px;
-      background-color: #927397;
+      background-color: rgba(135, 18, 212, 0.6);
       width: 100%;
       padding: 10px;      
   }
@@ -1167,13 +1167,17 @@ input[type=text]:focus, input[type=password]:focus {
 /* For smartphones screen sizes 600px and lower */
 @media screen and (max-width: 600px) {
 
+    #logo {
+        text-align: center;
+    }
+
     #menu {
         margin-bottom: 2.5rem;
     }
 
     #menu li {
         margin: 0 4px 0 4px;
-        padding: 0 56px 0 6px;
+        padding: 0 6px 0 6px;
         font-size: 16px;
     }
 
@@ -1182,14 +1186,20 @@ input[type=text]:focus, input[type=password]:focus {
 /* For ultra small screen sizes 400px and lower */
 
 @media screen and (max-width: 400px) {
+
+    #logo {
+        text-align: center;
+    }
     #menu li {
-        margin: 0 3px 0 3px;
-        padding: 0 3px 0 3px;
-        font-size: 0.9rem;
+        margin: 5px ;
+        padding: 2px ;
+        font-size: 2rem;
+        word-spacing: 2rem;
+
     }
 
     #menu {
-        line-height: 23px;
+        line-height: 15px;
     }
 
     .workshop-signup-form {
